# vibe-cli

./: README.md  pyproject.toml
src/vibe/: cli.py
